# fast-api-cotacoes

./: Dockerfile  converter.py  main.py  pyproject.toml  routers.py
app/: main.py  routers.py
