[tool.poetry]
name = "teste-api"
version = "0.1.0"
description = ""
authors = ["carolina_naciff"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
routers = "^0.10.1"
requests = "^2.31.0"
asyncio = "^3.4.3"
aiohttp = "^3.9.3"
uvicorn = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
